# mcp-langgraph

./: CHANGELOG.md  Dockerfile.client  Dockerfile.server  Dockerfile.ui  Makefile  README.md  app_mcp_client.py  chat_ui.py  docker-compose.yml  pyproject.toml
.streamlit/: config.toml  secrets.toml
src/mcp_sandbox/config/: config.py  global_config.py  model_config.yaml
src/mcp_sandbox/resources/: mcp_server.py
src/mcp_sandbox/services/: blueprint_file.py  file.py  logger.py
src/notebooks/: langgraph_toy.ipynb
